package edu.utec.webpft.dtos;

import lombok.Data;

@Data
public class EstadoConstanciaDto {
    private long id;
    private String descripcion;
}
