package edu.utec.webpft.dtos;

import lombok.Data;

@Data
public class EstadoReclamoDto {
    private long id;
    private String descripcion;
}
