package edu.utec.webpft.dtos;

import lombok.Builder;
import lombok.Data;

@Data @Builder
public class LocalidadDto {
    private Long id;
    private String nombre;
    private Long departamento;
}

