package edu.utec.webpft.dtos;

import lombok.Data;

@Data
public class ModalidadEventoDto {
    private long id;
    private String descripcion;
}
