package edu.utec.webpft.dtos;

import lombok.Data;

@Data
public class RolDto {
    private Long id;
    private String nombre;
}

