package edu.utec.webpft.dtos;

import lombok.Data;

@Data
public class TipoConstanciaDto {
    private long id;
    private String descripcion;
}
