package edu.utec.webpft.dtos;

import lombok.Data;

@Data
public class TipoReclamoDto {
    private long id;
    private String descripcion;
}
